# reddit-trend-reporter

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  pyproject.toml  vite.config.js
.github/workflows/: pages.yml
config/: aigamedev.json  leaderboard.json  profiles.json  reddit-report.json
data/runs/: 20260609T141541Z.json  20260609T143702Z.json  20260609T151542Z.json  20260610T070748Z.json  20260610T122416Z.json
data/runs/aigamedev/: 20260610T134201Z.json
data/runs/leaderboard/: 20260610T134111Z.json
docs/: architecture.md  how-it-works.md  roadmap.md
knowledge/models/: anima.json  comfyui.json  ideogram-4.json  ltx-2-3.json  z-image.json
knowledge/schema/: model-reputation.schema.json
public/data/: index.json  latest.json  profiles.json
public/data/aigamedev/: index.json
public/data/aigamedev/reports/: 20260610T134201Z.json
public/data/leaderboard/: index.json
public/data/leaderboard/reports/: 20260610T134111Z.json
public/data/reports/: 20260609T143702Z.json  20260609T151542Z.json  20260610T070748Z.json  20260610T122416Z.json
reddit_trend_reporter/: __init__.py  __main__.py  cli.py  collect.py  config.py  manifest.py  pipeline.py  profiles.py  report.py
reddit_trend_reporter/data/: default-config.json
scripts/: collect_reddit.py  pipeline.py  run_claude_report.py  setup.sh
src/: main.jsx  styles.css
